--- a/k8s/currencyservice.yaml
+++ b/k8s/currencyservice.yaml
@@ -30,7 +30,7 @@ spec:
               - ALL
           privileged: false
           readOnlyRootFilesystem: true
-        image: currencyservice
+        image: hieutv.registry.com/currencyservice:PLACEHOLDER
         ports:
         - name: grpc
           containerPort: 7000
